fix visualization on mobile menu

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -106,15 +106,15 @@
     display: block; }
 
 .header__nav--mobile {
-  position: absolute;
+  position: fixed;
   z-index: 1000;
-  top: 50px;
+  top: 110px;
   left: 0;
   width: 100%;
   height: 100%; }
   .header__nav--mobile .overlay {
     position: absolute;
-    top: 60px;
+    top: 0;
     left: 0;
     width: 100%;
     height: 100%;
@@ -129,8 +129,8 @@
     position: relative;
     z-index: 1010;
     box-shadow: 0 5px 20px rgba(0, 0, 0, 0.5);
-    margin: 60px -10px 0;
-    padding: 0 30px 100px;
+    margin: 0;
+    padding: 10px 30px 80px;
     list-style: none;
     color: white;
     position: relative;
@@ -157,7 +157,7 @@
         margin-right: 30px; }
   .header__nav--mobile ul:after {
     bottom: 100%;
-    right: 40px;
+    right: 28px;
     border: solid transparent;
     content: " ";
     height: 0;
